--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   filepicker_windows: ^2.0.1
   aes_crypt_null_safe: ^2.0.2
   flutter_acrylic: ^1.0.0+2
+  window_manager: ^0.2.0
+  bitsdojo_window: ^0.1.1+1
+  simple_ripple_animation: ^0.0.3
+  flutter_neumorphic: ^3.2.0
 
 dev_dependencies:
   flutter_test:
@@ -62,8 +66,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/icons/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
