--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,12 @@ dependencies:
   window_manager: ^0.2.0
   bitsdojo_window: ^0.1.1+1
   simple_ripple_animation: ^0.0.3
-  flutter_neumorphic: ^3.2.0
+  desktop_drop: ^0.3.3
+  path_provider: ^2.0.9
+  filesystem_picker: ^2.0.0
+  permission_handler: ^9.2.0
+  file_picker: ^4.5.1
+  get: ^4.6.1
 
 dev_dependencies:
   flutter_test:
