--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   permission_handler: ^9.2.0
   file_picker: ^4.5.1
   get: ^4.6.1
+  resizable_widget: ^1.0.5
 
 dev_dependencies:
   flutter_test:
