--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,8 @@ dependencies:
   permission_handler: ^9.2.0
   file_picker: ^4.5.1
   get: ^4.6.1
-  resizable_widget: ^1.0.5
+  percent_indicator: ^4.0.0
+
 
 dev_dependencies:
   flutter_test:
