--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
 
 
   # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  # Use with the CupertinoIcons class for iOS style icons. 
   cupertino_icons: ^1.0.2
   fluent_ui: ^3.9.1
   filepicker_windows: ^2.0.1
@@ -49,6 +49,7 @@ dependencies:
   get: ^4.6.1
   percent_indicator: ^4.0.0
   crypton: ^2.0.3
+  glass_kit: ^2.0.1
 
 
 dev_dependencies:
