--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,6 @@ dependencies:
   fluent_ui: ^3.9.1
   filepicker_windows: ^2.0.1
   aes_crypt_null_safe: ^2.0.2
-  flutter_acrylic: ^1.0.0+2
   window_manager: ^0.2.0
   bitsdojo_window: ^0.1.1+1
   simple_ripple_animation: ^0.0.3
@@ -49,7 +48,9 @@ dependencies:
   get: ^4.6.1
   percent_indicator: ^4.0.0
   crypton: ^2.0.3
-  glass_kit: ^2.0.1
+  loading_indicator: ^3.0.3
+  animated_text_kit: ^4.2.1
+
 
 
 dev_dependencies:
